vendor/ocaml/testsuite/tests/backtrace/backtrace.b.native.reference
b
Fatal error: exception Backtrace.Error("b")
Raised at file "backtrace.ml", line 7, characters 16-32
Called from file "backtrace.ml", line 7, characters 42-53
Called from file "backtrace.ml", line 7, characters 42-53
Called from file "backtrace.ml", line 7, characters 42-53
Called from file "backtrace.ml", line 7, characters 42-53
Called from file "backtrace.ml", line 7, characters 42-53
Called from file "backtrace.ml", line 11, characters 4-11
Re-raised at file "backtrace.ml", line 13, characters 62-71
Called from file "backtrace.ml", line 18, characters 9-25
